<?xml version="1.0"?>
<package format="2">
  <name>util_rviz</name>
  <version>1.0.0</version>
  <description>Utils for ROS Rviz</description>

  <license>BSD</license>
  <maintainer email="jannik.quehl@kit.edu">Jannik Quehl</maintainer>
  <author email="maximilian.naumann@kit.edu">Maximilian Naumann</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>

  <depend>roslib</depend>
  <depend>rviz</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
